--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="title">
         <h1>StyleGrove</h1>
-        <nav class="sub-title"><p><a href="home.html">Home</a></p>
+        <nav class="sub-title"><p><a href="index.html">Home</a></p>
         <p><a href="collection.html">Collection</a></p>
         <p><a href="contact.html">Contact</a></p>
 
