--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,9 @@
     <div class="mobile-phone">
         <i class="fa-solid fa-xmark" onclick="hide()" id="cancel-toggle" style="color: rgb(240, 248, 255);"></i>
         <div>
-            <p><a href="" class="home" style="color: rgb(240, 248, 255);">Home</a></p>
-            <p><a href="" class="home" style="color: rgb(240, 248, 255);">Collection</a></p>
-            <p><a href=""  class="home"style="color: rgb(240, 248, 255);">Contact</a></p>
+            <p><a href="index.html" class="home" style="color: rgb(240, 248, 255);">Home</a></p>
+            <p><a href="collection.html" class="home" style="color: rgb(240, 248, 255);">Collection</a></p>
+            <p><a href="contact.html"  class="home"style="color: rgb(240, 248, 255);">Contact</a></p>
         </div>
         
 
