Updated homepage banner and product grid

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="title">
         <h1>StyleGrove</h1>
         <nav class="sub-title"><p><a href="index.html">Home</a></p>
-        <p><a href="collection.html">Collection</a></p>
+        <p><a href="collection.html">Collections</a></p>
+        <p><a href="about.html">About Us</a></p>
         <p><a href="contact.html">Contact</a></p>
 
         </nav>
@@ -31,8 +32,10 @@
         <i class="fa-solid fa-xmark" onclick="hide()" id="cancel-toggle" style="color: rgb(240, 248, 255);"></i>
         <div>
             <p><a href="index.html" class="home" style="color: rgb(240, 248, 255);">Home</a></p>
-            <p><a href="collection.html" class="home" style="color: rgb(240, 248, 255);">Collection</a></p>
+            <p><a href="collection.html" class="home" style="color: rgb(240, 248, 255);">Collections</a></p>
+            <p><a href="about.html"  class="home"style="color: rgb(240, 248, 255);">About Us</a></p>
             <p><a href="contact.html"  class="home"style="color: rgb(240, 248, 255);">Contact</a></p>
+            
         </div>
         
 
